<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <import type="android.view.View" />

        <variable
            name="adapter"
            type="com.example.currency.adapter.CurrencyAdapter" />

        <variable
            name="layoutManager"
            type="androidx.recyclerview.widget.GridLayoutManager" />

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/padding_big">

        <TextView
            android:id="@+id/tvHeader"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorPrimaryDark"
            android:gravity="center"
            android:padding="@dimen/activity_vertical_margin"
            android:text="@string/select_currency"
            android:textColor="@android:color/white"
            android:textSize="@dimen/text_big"
            android:textStyle="bold"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rvCurrencies"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            app:adapterToRv="@{ adapter }"
            app:layoutManagerToRv="@{ layoutManager }"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvHeader" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>