<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <import type="android.view.View" />

        <variable
            name="adapter"
            type="com.example.currency.adapter.ExchangeRateAdapter" />

        <variable
            name="layoutManager"
            type="androidx.recyclerview.widget.GridLayoutManager" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <EditText
            android:id="@+id/etInput"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:autofillHints="@string/app_name"
            android:gravity="right|center_vertical"
            android:inputType="numberDecimal"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tvCurrency"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:drawableRight="@drawable/ic_arrow_drop_down_black_24dp"
            android:padding="@dimen/activity_horizontal_margin"
            android:text="@string/select_currency"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/etInput" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rvExchangeRate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:adapterToRv="@{ adapter }"
            app:layoutManagerToRv="@{ layoutManager }"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvCurrency" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>